--- a/style.css
+++ b/style.css
@@ -12,3 +12,12 @@
 body{
     font-family: "Poppins", sans-serif;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+p {
+    color: rgb(85, 85, 85);
+}
+
