--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ p {
     color: rgb(85, 85, 85);
 }
 
+/*TRANSITION*/
+a, .bin {
+    transition: all 300ms ease;
+}
+
+/*Desktop Nav */
+nav, 
+.nav-links{
+    display: flex;
+}
+
